    now properly captured and sent back to the worker process.

  * Added an if statement inside the abort method.
  * Removed an old unlink _store.db statement (old code left behind).
  * Removed an unused _next variable inside Request.pm.

  [ENHANCEMENTS]

  * The chunk_size value can take a suffix; K (Kilobytes) or M (Megabytes).

  [NEW FEATURES]

  * The input_data option can now receive an iterator reference. Added a
    new example iterator.pl for demonstraton. In addition, there are
    several examples listed under a new section "SYNTAX for INPUT_DATA"
    in MCE::Core.pod.

  * Added a new demo script bin/mce_grep. This is a wrapper script for the
    grep binary. This script supports agrep, grep, egrep, fgrep, & tre-agrep.
    Simply create a link to mce_grep or make a copy. Both Windows and Cygwin
    are supported as well.

      ln -s mce_grep mce_egrep
      ln -s mce_grep mce_fgrep
      ln -s mce_grep mce_agrep
      ln -s mce_grep mce_tre-agrep

    Try with the --lang=C option for faster execution time (-i runs faster).
    Try mce_agrep or mce_tre-agrep against very large files. The speedup is
    linear and makes good utilization of all available cores on the box.

    I have tested against the following GnuWin32 packages found at this URL.
    http://gnuwin32.sourceforge.net/packages.html

      tre-0.7.5-bin.zip         ## Contains agrep.exe (also runs under Cygwin)
      grep-2.5.4-bin.zip        ## Contains egrep.exe, fgrep.exe, grep.exe
      libiconv-1.9.2-1-bin.zip  ## These are required as well
      libintl-0.14.4-bin.zip
      pcre-7.0-bin.zip
      regex-2.7-bin.zip

    Btw, bin/mce_grep is optional and therefore not installed by default
    when running make install for the MCE module. Simply copy mce_grep as
    mce_agrep.pl (with the .pl extension) under the same GnuWin32 bin.

1.504 Tue Oct 29 16:00:00 EST 2013

  [BUG FIXES]

  * MCE::Grep, MCE::Map, and MCE::Stream were failing for mce_grep_s,